bk_ida/gccida/g0/convert_from_eh_region_ranges_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1798:4: error: expected ';' after expression
rtx insn; // [rsp+40h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1798:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+40h] [rbp-20h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1802:7: error: use of undeclared identifier 'insn'
for ( insn = *pinsns; insn; insn = next ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1802:23: error: use of undeclared identifier 'insn'
for ( insn = *pinsns; insn; insn = next ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1802:29: error: use of undeclared identifier 'insn'
for ( insn = *pinsns; insn; insn = next ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1804:8: error: use of undeclared identifier 'insn'
next = insn[1].fld[0].rtx; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1805:17: error: use of undeclared identifier 'insn'
if ( *( _WORD *)insn == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1807:8: error: use of undeclared identifier 'insn'
kind = insn[2].fld[0].rtint; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1814:13: error: use of undeclared identifier 'insn'
cur = ( int)insn[2]; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1839:6: error: use of undeclared identifier 'insn'
if ( insn == *pinsns ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1841:14: error: use of undeclared identifier 'insn'
remove_insn( insn); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1844:32: error: use of undeclared identifier 'insn'
else if ( rtx_class[*( _WORD *)insn] == 105 ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1847:20: error: use of undeclared identifier 'insn'
&& !find_reg_note( insn, REG_EH_REGION, 0LL) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1848:17: error: use of undeclared identifier 'insn'
&& ( *( _WORD *)insn == 34 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1850:18: error: use of undeclared identifier 'insn'
&& **( _WORD **)&insn[2] != 49 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1851:18: error: use of undeclared identifier 'insn'
&& **( _WORD **)&insn[2] != 48 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1852:24: error: expected expression
&& may_trap_p( *( rtx *)&insn[2])) ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1852:26: error: use of undeclared identifier 'insn'
&& may_trap_p( *( rtx *)&insn[2])) ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/except.c:1854:7: error: use of undeclared identifier 'insn'
rtx = insn[3].fld[0].rtx; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/convert_from_eh_region_ranges_1/src/obj/except.o] Error 1
